--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Time-Table</title>
         <meta name="time-table"/>
         <meta content="time table"/>
-        <link rel="stylesheet" type="text/css" href="/home/d4mz3y/Documents/timetable/style.css"/>
-        <script type="text\javascript" src="/home/d4mz3y/Documents/timetable/edit.js"></script>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <!--<script type="text\javascript" src="/home/d4mz3y/Documents/timetable/edit.js"></script>-->
         <meta content="index, follow" name="robot">
         <meta content="initial-scale=1" name="viewport">
         <meta content="editable time-table" name="description">
@@ -26,11 +26,11 @@
             <hr/>
         </div> 
         <div id="share"> 
-            <p><a id="sticky" href="https://www.facebook.com/d4mz3y/" id="facebook"><img src="/home/d4mz3y/Documents/timetable/facebook.svg"/></a></p>
-            <p><a id="sticky" href="https://twitter.com/damzey_damien" id="twitter"><img src="/home/d4mz3y/Documents/timetable/twitter.svg"/></a></p> 
-            <p><a id="sticky" href="https://www.instagram.com/_damzey_/" id="instagram"><img src="/home/d4mz3y/Documents/timetable/instagram-sketched.svg"/></a></p>
-            <p><a id="sticky" href="https://wa.me/2348068667823" id="whatsapp"><img src="/home/d4mz3y/Documents/timetable/whatsapp.svg"/></a></p>
-            <p><a id="sticky" href="mailto:anonymousd4mz3y@gmail.com" id="gmail"><img src="/home/d4mz3y/Documents/timetable/gmail.svg"/></a></p>
+            <p><a id="sticky" href="https://www.facebook.com/d4mz3y/" id="facebook"><img src="facebook.svg"/></a></p>
+            <p><a id="sticky" href="https://twitter.com/damzey_damien" id="twitter"><img src="twitter.svg"/></a></p> 
+            <p><a id="sticky" href="https://www.instagram.com/_damzey_/" id="instagram"><img src="instagram-sketched.svg"/></a></p>
+            <p><a id="sticky" href="https://wa.me/2348068667823" id="whatsapp"><img src="whatsapp.svg"/></a></p>
+            <p><a id="sticky" href="mailto:anonymousd4mz3y@gmail.com" id="gmail"><img src="gmail.svg"/></a></p>
         </div>
         <div class="container">
             <table class="table" id="editTd" spellcheck="true">
