edited share buttons

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <hr/>
         </div> 
         <div id="share"> 
-            <p><a id="sticky" href="https://www.facebook.com/d4mz3y/" id="facebook"><img src="facebook.svg"/></a></p>
-            <p><a id="sticky" href="https://twitter.com/damzey_damien" id="twitter"><img src="twitter.svg"/></a></p> 
-            <p><a id="sticky" href="https://www.instagram.com/_damzey_/" id="instagram"><img src="instagram-sketched.svg"/></a></p>
-            <p><a id="sticky" href="https://wa.me/2348068667823" id="whatsapp"><img src="whatsapp.svg"/></a></p>
-            <p><a id="sticky" href="mailto:anonymousd4mz3y@gmail.com" id="gmail"><img src="gmail.svg"/></a></p>
+            <p><a id="sticky" href="https://www.facebook.com/sharer/sharer.php?u=https://d4mz3y.github.io/time-table/" id="facebook"><img src="facebook.svg"/></a></p>
+            <p><a id="sticky" href="https://twitter.com/home?status=https://d4mz3y.github.io/time-table/ " id="twitter"><img src="twitter.svg"/></a></p> 
+            <p><a id="sticky" href="https://www.instagram.com/home?status=https://d4mz3y.github.io/time-table/" id="instagram"><img src="instagram-sketched.svg"/></a></p>
+            <p><a id="sticky" href="https://api.whatsapp.com/send?text=https%3A%2F%2Fd4mz3y.github.io%2Ftime-table%2F" id="whatsapp"><img src="whatsapp.svg"/></a></p>
+            <p><a id="sticky" href="mailto:info@example.com?&subject=&body=https://d4mz3y.github.io/time-table/ " id="gmail"><img src="gmail.svg"/></a></p>
         </div>
         <div class="container">
             <table class="table" id="editTd" spellcheck="true">
