--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <button id="editBtn" type="button">Tap to edit table!</button> 
             <div id="editP">
                 <div>
-                    <span id="edit">PS:The table is editable</span>
+                    <span id="edit"></span>
                 </div>
             </div>
             <div id="editFooter">
